--- a/gtk-3.0/widgets/_treeviews.scss
+++ b/gtk-3.0/widgets/_treeviews.scss
@@ -101,13 +101,10 @@ treeview.view {
       &:focus, & {
         border-radius: 4px;
 
-        @if $variant == 'light' {
-          color: $selected_bg_color;
-          box-shadow: none;
-        }
+        @if $variant == 'light' { box-shadow: none; }
 
         @else { box-shadow: inset 0 1px transparentize(white, 0.95); }
-
+        color: $selected_bg_color;
         background-image: linear-gradient(to bottom,
                                           $base_color,
                                           darken($base_color,10%));
